<resources>
    <string name="app_name">图书商城</string>
    <string name="ht_username">用户名</string>
    <string name="ht_password">密码</string>
    <string name="sign_in">登录</string>
    <string name="hint_nav_sign_up">还没有账号？</string>
    <string name="nav_sign_up">点击注册</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_nav_sign_in">已经有账号了？</string>
    <string name="nav_sign_in">点击登录</string>
    <string name="sign_up">注册</string>
    <string name="ht_password_confirm">确认密码</string>
    <string name="welcome">✨欢迎来到✨\nBook Store 图书商城</string>
    <string name="home">首页</string>
    <string name="shopping_cart">购物车</string>
    <string name="order">历史订单</string>
    <string name="sentence">Knowledge is the eye of the mind</string>
    <string name="all">全部</string>
    <string name="novel">小说</string>
    <string name="rmb">￥</string>
    <string name="add_shopping_cart">加入购物车</string>
    <string name="search">搜索</string>
    <string name="select_all">全选</string>
    <string name="total_price_hint">合计:￥</string>
    <string name="settle">去结算</string>
    <string name="unpaid">待付款</string>
    <string name="unreceived">待收货</string>
    <string name="finished">已完成</string>
    <string name="canceled">已取消</string>
    <string name="more">更多</string>
    <string name="init_db">点击初始化数据</string>
    <string name="pay">支付</string>
    <string name="cancel">取消</string>
    <string name="order_id_hint">订单编号:</string>
    <string name="order_time_hint">下单时间:</string>
    <string name="pay_method_hint">支付方式:</string>
    <string name="pay_time_hint">支付时间:</string>
    <string name="pay_price_hint">付款金额:</string>
    <string name="payment">请选择支付方式</string>
    <string name="alipay">支付宝</string>
    <string name="wechat">微信支付</string>
    <string name="qq">QQ支付</string>
    <string name="unionpay">银联支付</string>
    <string name="cancel_pay">暂不支付</string>
    <string name="ok_pay">确认支付</string>
    <string name="time_notification">超过支付时效后订单将被取消，请尽快完成支付</string>
    <string name="click_me">支付</string>
    <string name="search_result">搜索结果</string>
    <string name="empty_content">什么也没有…</string>
</resources>