<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable name="orderViewModel" type="com.nagico.bookstore.viewmodels.main.OrderViewModel"/>
    </data>
    <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".fragments.main.OrderFragment">

        <com.google.android.material.appbar.AppBarLayout
                android:layout_width="match_parent"
                android:backgroundTint="@color/theme_bg_white"
                android:layout_height="wrap_content" android:id="@+id/appBarLayout"
        >
            <com.google.android.material.tabs.TabLayout
                    android:id="@+id/order_tab_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/theme_bg_white"
                    app:layout_scrollFlags="scroll|enterAlways"
                    app:tabMode="fixed">

                <com.google.android.material.tabs.TabItem
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/all"
                        android:icon="@drawable/ic_order_all"
                />

                <com.google.android.material.tabs.TabItem
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/unpaid"
                        android:icon="@drawable/ic_order_pay"
                />

                <com.google.android.material.tabs.TabItem
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/unreceived"
                        android:icon="@drawable/ic_order_delivery"
                />

                <com.google.android.material.tabs.TabItem
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/finished"
                        android:icon="@drawable/ic_order_finish"
                />

                <com.google.android.material.tabs.TabItem
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/canceled"
                        android:icon="@drawable/ic_order_cancel"
                />

            </com.google.android.material.tabs.TabLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <com.drake.statelayout.StateLayout
                android:id="@+id/state"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">
            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/order_recycler_container"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/theme_bg"/>
        </com.drake.statelayout.StateLayout>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>