<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/lLayout_bg"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
>

    <LinearLayout
            android:layout_margin="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/round">
        <RelativeLayout
                android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="4dp">
            <ImageView
                    android:id="@+id/iv_pay_icon"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_toStartOf="@id/tv_title"
                    android:layout_alignTop="@id/tv_title"
                    android:src="@drawable/ic_pay"
                    android:layout_marginTop="6dp"
                    android:layout_marginEnd="-56dp"/>
            <TextView
                    android:id="@+id/tv_title"
                    android:layout_marginTop="10dp"
                    android:textStyle="bold"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:text="@string/payment"/>
        </RelativeLayout>

        <com.nagico.bookstore.views.groups.MultiLineRadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:id="@+id/rg_pay_type">
            <android.widget.GridLayout
                    android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:columnCount="2"
                        android:orientation="vertical"
                        android:rowCount="2"
                        android:layout_margin="10dp"
                        android:layout_gravity="center">
                <RadioButton android:id="@+id/rb_pay_alipay"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_margin="10dp"
                             android:text="@string/alipay"
                             android:textSize="14sp"
                             android:textColor="@color/black"
                             android:checked="true"
                             android:layout_gravity="center"/>
                <RadioButton android:id="@+id/rb_pay_qq"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_margin="10dp"
                             android:text="@string/qq"
                             android:textSize="14sp"
                             android:textColor="@color/black"
                             android:layout_gravity="center"/>
                <RadioButton android:id="@+id/rb_pay_unionpay"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_margin="10dp"
                             android:text="@string/unionpay"
                             android:textSize="14sp"
                             android:textColor="@color/black"
                             android:layout_gravity="center"/>
                <RadioButton android:id="@+id/rb_pay_wechat"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_margin="10dp"
                             android:text="@string/wechat"
                             android:textSize="14sp"
                             android:textColor="@color/black"
                             android:layout_gravity="center"/>

            </android.widget.GridLayout>
        </com.nagico.bookstore.views.groups.MultiLineRadioGroup>

        <TextView
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:id="@+id/tv_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/time_notification"/>

        <LinearLayout
                android:layout_marginTop="10dp"
                android:id="@+id/layout_bottom"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

            <TextView
                    android:id="@+id/tv_cancel"
                    android:layout_width="0px"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/shape_pay_dialog_cancel"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:text="@string/cancel_pay"/>

            <TextView
                    android:id="@+id/tv_ok"
                    android:layout_width="0px"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/shape_pay_dialog_ok"
                    android:gravity="center"
                    android:text="@string/ok_pay"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>