<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".fragments.welcome.SignUpFragment"
>

    <ImageView
            android:id="@+id/img_sign_up_home"
            android:layout_width="0dp"
            android:layout_height="0dp" app:srcCompat="@drawable/pic_sign_up"
            android:scaleType="centerInside" android:alpha="0.9"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/etx_sign_up_username" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="40dp" android:layout_marginEnd="40dp" android:layout_marginTop="12dp"
            android:layout_marginBottom="16dp"/>
    <EditText android:id="@+id/etx_sign_up_username"
              android:layout_width="match_parent"
              android:layout_height="48dp"
              android:layout_marginLeft="36dp"
              android:layout_marginRight="36dp"
              android:maxLength="30"
              android:paddingStart="12dp"
              android:paddingEnd="12dp"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintStart_toStartOf="parent"
              android:singleLine="true"
              android:background="@drawable/edittext_shape"
              android:drawableStart="@drawable/ic_username"
              android:drawablePadding="8dp"
              android:inputType="textShortMessage"
              android:hint="@string/ht_username"
              app:layout_constraintBottom_toTopOf="@+id/etx_sign_up_password" android:layout_marginBottom="16dp"
    />
    <EditText android:id="@+id/etx_sign_up_password"
              android:layout_width="match_parent"
              android:layout_height="48dp"
              android:layout_marginLeft="36dp"
              android:layout_marginRight="36dp"
              android:maxLength="30"
              android:paddingStart="12dp"
              android:paddingEnd="12dp"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintStart_toStartOf="parent"
              android:singleLine="true"
              android:background="@drawable/edittext_shape"
              android:drawableStart="@drawable/ic_password"
              android:drawablePadding="8dp"
              android:inputType="textPassword"
              android:hint="@string/ht_password"
              app:layout_constraintHorizontal_bias="0.541" app:layout_constraintBottom_toBottomOf="parent"
              app:layout_constraintTop_toTopOf="parent"/>

    <EditText android:id="@+id/et_sign_up_password_confirm"
              android:layout_width="match_parent"
              android:layout_height="48dp"
              android:layout_marginLeft="36dp"
              android:layout_marginRight="36dp"
              android:maxLength="30"
              android:paddingStart="12dp"
              android:paddingEnd="12dp"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintStart_toStartOf="parent"
              android:singleLine="true"
              android:background="@drawable/edittext_shape"
              android:drawableStart="@drawable/ic_password"
              android:drawablePadding="8dp"
              android:inputType="textPassword"
              android:hint="@string/ht_password_confirm"
              app:layout_constraintTop_toBottomOf="@+id/etx_sign_up_password" android:layout_marginTop="16dp"/>
    <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            android:text="@string/sign_up"
            android:backgroundTint="@color/theme_alert"
            android:layout_width="122dp"
            android:layout_height="53dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_sign_up_password_confirm" android:layout_marginTop="24dp"/>
    <TextView
            android:id="@+id/txt_hint_nav_sign_in"
            android:text="@string/hint_nav_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.434"/>
    <TextView
            android:id="@+id/txt_nav_sign_in"
            android:text="@string/nav_sign_in"
            android:layout_width="wrap_content"
            android:textColor="@color/theme_primary"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp"
            app:layout_constraintStart_toEndOf="@+id/txt_hint_nav_sign_in" android:clickable="true"/>

</androidx.constraintlayout.widget.ConstraintLayout>