<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/theme_bg_white"
        tools:context=".fragments.welcome.WelcomeFragment">
    <ImageView
            android:id="@+id/img_welcome_home"
            android:layout_width="0dp"
            android:layout_height="0dp" app:srcCompat="@drawable/pic_home"
            app:layout_constraintTop_toTopOf="parent" android:scaleType="centerInside" android:alpha="0.9"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/txt_welcome" android:layout_marginStart="40dp"
            android:layout_marginTop="12dp" android:layout_marginBottom="16dp" android:layout_marginEnd="40dp"/>
    <TextView
            android:id="@+id/txt_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/welcome"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" android:gravity="center"
            android:textColor="@color/theme_primary" android:textAlignment="center" android:textSize="24sp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"/>
    <Button
            android:id="@+id/btn_nav_sign_in"
            android:text="@string/sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:paddingStart="40dp"
            android:paddingEnd="40dp"
            android:textSize="20sp"
            app:shapeAppearance="@style/CircleStyle"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="52dp" android:layout_marginBottom="128dp"
            android:backgroundTint="@color/theme_alert"/>
    <Button
            android:id="@+id/btn_nav_sign_up"
            android:text="@string/sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:paddingStart="40dp"
            android:paddingEnd="40dp"
            android:textSize="20sp"
            app:shapeAppearance="@style/CircleStyle"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="52dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="128dp"
            android:backgroundTint="@color/theme_alert"/>


</androidx.constraintlayout.widget.ConstraintLayout>