<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <import type="android.view.View"/>
        <variable name="orderDetailViewModel" type="com.nagico.bookstore.viewmodels.main.OrderDetailViewModel"/>
    </data>
    <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".fragments.main.OrderDetailFragment">

        <com.google.android.material.appbar.AppBarLayout
                android:backgroundTint="@color/theme_bg_white"
                android:layout_height="wrap_content"
                android:layout_width="match_parent">
            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="8dp">
                <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/ic_back"
                        android:clickable="true"
                        android:src="@drawable/ic_back"
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        app:shapeAppearance="@style/CircleStyle"
                        android:padding="1dp"
                        app:strokeColor="#3F939393"
                        android:scaleType="centerInside"
                        app:strokeWidth="2dp" app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_margin="16dp"/>
                <TextView
                        android:id="@+id/txt_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{orderDetailViewModel.order.statusString}"
                        android:textColor="@color/black"
                        android:textSize="24sp" app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="16dp"
                        android:textStyle="bold"/>
                <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/ic_more"
                        android:clickable="true"
                        android:src="@drawable/ic_more"
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        app:shapeAppearance="@style/CircleStyle"
                        android:padding="1dp"
                        app:strokeColor="#3F939393"
                        android:scaleType="centerInside"
                        app:strokeWidth="2dp" app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_margin="16dp"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/theme_bg"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">
            <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/info"
                    app:layout_behavior="@string/appbar_scrolling_view_behavior"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/order_detail_recycler_container"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:background="@color/theme_bg_white"
                        app:layout_behavior="@string/appbar_scrolling_view_behavior"
                        app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginTop="4dp" app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginStart="8dp" android:layout_marginEnd="8dp"/>

                <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/order_info_layout"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:shapeAppearance="@style/roundedCornerStyle2"
                        android:background="@color/theme_bg_white"
                        app:layout_constraintTop_toBottomOf="@+id/order_detail_recycler_container"
                        app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginTop="16dp" android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
                        android:paddingBottom="16dp" android:paddingTop="16dp">
                    <TextView
                            android:id="@+id/txt_order_id_hint"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/order_id_hint"
                            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="12dp"
                            app:layout_constraintTop_toTopOf="parent"/>
                    <TextView
                            android:id="@+id/txt_order_id"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@{orderDetailViewModel.order.id.toString()}"
                            android:textColor="@color/black"
                            android:textSize="18sp"
                            android:layout_marginStart="16dp"
                            app:layout_constraintStart_toEndOf="@+id/txt_order_id_hint"
                            app:layout_constraintTop_toTopOf="parent"/>
                    <TextView
                            android:id="@+id/txt_order_time_hint"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/order_time_hint" android:layout_marginTop="8dp"
                            app:layout_constraintTop_toBottomOf="@+id/txt_order_id_hint"
                            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="12dp"/>
                    <TextView
                            android:id="@+id/txt_order_time"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@{orderDetailViewModel.order.orderDateString}"
                            android:textColor="@color/black"
                            android:textSize="18sp"
                            android:layout_marginStart="16dp"
                            app:layout_constraintStart_toEndOf="@+id/txt_order_time_hint"
                            app:layout_constraintTop_toBottomOf="@+id/txt_order_id" android:layout_marginTop="3dp"/>
                    <TextView
                            android:id="@+id/txt_pay_method_hint"
                            android:layout_width="wrap_content"
                            android:visibility="@{orderDetailViewModel.order.status == 1 || orderDetailViewModel.order.status == 4 ? View.GONE : View.VISIBLE}"
                            android:layout_height="wrap_content"
                            android:text="@string/pay_method_hint"
                            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="12dp"
                            android:layout_marginTop="8dp"
                            app:layout_constraintTop_toBottomOf="@+id/txt_order_time_hint"/>
                    <TextView
                            android:id="@+id/txt_pay_method"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:visibility="@{orderDetailViewModel.order.status == 1 || orderDetailViewModel.order.status == 4 ? View.GONE : View.VISIBLE}"
                            android:text="@{orderDetailViewModel.order.paymentMethod}"
                            android:textColor="@color/black"
                            android:textSize="18sp"
                            android:layout_marginStart="16dp"
                            app:layout_constraintStart_toEndOf="@+id/txt_pay_method_hint" android:layout_marginTop="3dp"
                            app:layout_constraintTop_toBottomOf="@+id/txt_order_time"/>
                    <TextView
                            android:id="@+id/txt_pay_time_hint"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:visibility="@{orderDetailViewModel.order.status == 1 || orderDetailViewModel.order.status == 4 ? View.GONE : View.VISIBLE}"
                            android:text="@string/pay_time_hint"
                            android:layout_marginTop="8dp"
                            app:layout_constraintTop_toBottomOf="@+id/txt_pay_method_hint"
                            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="12dp"/>
                    <TextView
                            android:id="@+id/txt_pay_time"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:visibility="@{orderDetailViewModel.order.status == 1 || orderDetailViewModel.order.status == 4 ? View.GONE : View.VISIBLE}"
                            android:text="@{orderDetailViewModel.order.payDateString}"
                            android:textColor="@color/black"
                            android:textSize="18sp"
                            android:layout_marginStart="16dp"
                            app:layout_constraintStart_toEndOf="@+id/txt_pay_time_hint"
                            android:layout_marginTop="3dp" app:layout_constraintTop_toBottomOf="@+id/txt_pay_method"/>
                    <TextView
                            android:id="@+id/txt_pay_price_hint"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:visibility="@{orderDetailViewModel.order.status == 1 || orderDetailViewModel.order.status == 4 ? View.GONE : View.VISIBLE}"
                            android:text="@string/pay_price_hint"
                            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="12dp"
                            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/txt_pay_time_hint"
                    />
                    <TextView
                            android:id="@+id/txt_pay_price"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:visibility="@{orderDetailViewModel.order.status == 1 || orderDetailViewModel.order.status == 4 ? View.GONE : View.VISIBLE}"
                            android:text="@{`￥` + String.format(`%.2f`, orderDetailViewModel.order.paymentAmount)}"
                            android:textColor="@color/black"
                            android:textSize="18sp"
                            android:layout_marginStart="16dp"
                            app:layout_constraintStart_toEndOf="@+id/txt_pay_price_hint"
                            android:layout_marginTop="3dp" app:layout_constraintTop_toBottomOf="@+id/txt_pay_time"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>